[package]
name = "bunny-api-tokio"
version = "0.1.0"
edition = "2024"
authors = ["Radical <radical@radical.fun>"]
license = "MIT"
repository = "https://git.gorb.app/gorb/bunny-api-tokio"
description = "Provides access to the Bunny CDN API asynchronously using tokio."


[dependencies]
bytes = "1.10.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.0"
url = "2.5.4"
